--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+                  <input type="phone" class="form-control" minlength="11" maxlength="11" name="email" placeholder="Your Phone number" required>
                 </div>
 
                 <div class="col-md-12">
