--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </header>
 
         <div class="row gy-4" data-aos="fade-left">
-          <div class="col-lg-6 offset-3 col-md-6 offset-3" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-6 offset-3 col-md-6 offset-3 col-sm-6 offset-3" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <span class="featured">ICSS Short Courses</span>
               <h3 style="color: #65c600;">ICSS Short Courses</h3>
